# sidra-fetcher

./: .gitignore  01-list-sidra-agregados.py  01.1-get-agregados.py  01.2-get-acervos.py  02-get-agregados-metadados.py  02.1-get-agregados-metadados.py  02.2-get-agregados-localidades.py  02.3-get-agregados-periodos.py  02.4-get-acervos.py  03-calculate-data-per-agregado.py  CLAUDE.md  README.md  calculate-data-per-agregado.py  compress.py  decompress.py  fetch-metadata.py  fetch.py  get-agregados-dados.py  get-agregados-localidades.py  get-agregados-metadados.py  get-agregados-metadata.py  get-agregados-periodos.py  get-metadata.py  list-sidra-agregados.py  main.py  pyproject.toml
ibge_sidra_fetcher/: __init__.py  config.py  dispatcher.py  fetcher.py  path.py  sidra.py  stats.py  storage.py  utils.py
ibge_sidra_fetcher/api/: __init__.py  agregados.py  parameter.py  request.py  sidra.py  url.py
ibge_sidra_fetcher/api/agregados/: __init__.py  agregado.py  handler.py  url.py
ibge_sidra_fetcher/api/sidra/: __init__.py  agregado.py  parametro.py
ibge_sidra_fetcher/fetcher/: __init__.py  dispatch.py  get.py  worker.py
ibge_sidra_fetcher/sidra/: __init__.py
ibge_sidra_fetcher/storage/: io.py  locus.py  raw.py
src/ibge_sidra_fetcher/: config.py  dispatcher.py  fetcher.py  stats.py
src/ibge_sidra_fetcher/api/: agregados.py  sidra.py
src/sidra_fetcher/: __init__.py  agregados.py  fetcher.py  reader.py  sidra.py  stats.py
src/sidra_fetcher/api/: __init__.py  (+2 more)
tests/: test_agregados.py  test_fetcher.py  test_ibge_sidra_fetcher.py  test_sidra.py  test_stats.py
