[tool.poetry]
name = "ibge-sidra-fetcher"
version = "0.1.0"
description = ""
authors = ["Daniel Komesu <danielkomesu@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
httpx = "*"
tenacity = "*"

[tool.ruff]
line-length = 79
lint.extend-select = ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
