[project]
name = "ibge-sidra-fetcher"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    {name="Daniel Komesu", email="danielkomesu@gmail.com"},
]

requires-python = ">=3.13"

dependencies = [
    "httpx>=0.28.1",
    "tenacity>=9.1.2",
]

[tool.ruff]
line-length = 79
lint.extend-select = ["I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
