[project]
name = "sidra-fetcher"
version = "0.2.0"
description = "A Python package for fetching data from the IBGE's SIDRA API"
readme = "README.md"
authors = [
    {name="Daniel Komesu", email="danielkomesu@gmail.com"},
]
license = { file = "LICENSE" }
requires-python = ">=3.13"

dependencies = [
    "httpx>=0.28.1",
    "tenacity>=9.1.2",
]

[tool.ruff]
line-length = 79
lint.extend-select = ["I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
